Sun Apr 10 20:54:16 2016  Joe Swatosh  <joe.swatosh@gmail.com>

	* ext/win32/lib/win32/registry.rb (DeleteValue, DeleteKey): fix
	  API names.  [ruby-core:74863] [Bug #12264]

Sun Apr 10 17:47:42 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_realpath_internal): no argument conversions since
	  this internal function does not need to_path and encoding
	  conversions, not to be affected by the default internal
	  encoding.

Sat Apr  9 10:03:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_f_load): raise with the original path name before
	  encoding conversion.

Sat Apr  9 02:05:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_cstr_parse_inum): [EXPERIMENTAL] new function to
	  parse integer in C-string with length.  the name and the
	  arguments may be changed in the future.

	* bignum.c (rb_str_to_inum): preserve encoding of the argument in
	  error messages, and no longer needs to copy non-terminated
	  strings.

	* bignum.c (rb_str2big_{poweroftwo,normal,karatsuba,gmp}): ditto.

Thu Apr  7 19:04:03 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/regexp.rdoc (comments): [DOC] terminators cannot appear in
	  comments.  [ruby-core:74838] [Bug #12256]

Thu Apr  7 11:24:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tkutil/tkutil.c (cbsubst_initialize): fix out-of-bound
	  access when no arguments given.  `p Tk::Event.new` crashed.

Fri Apr  1 01:26:00 2016  Benoit Daloze  <eregontp@gmail.com>

	* ext/coverage/coverage.c: Fully reset coverage to not persist global state.
	  It was returning old file coverages as empty arrays to the user.
	  [ruby-core:74596] [Bug #12220]

	* ext/coverage/coverage.c (rb_coverages): remove unused static state.

	* thread.c: Moved and renamed coverage_clear_result_i to reset_coverage_i.

	* test/coverage/test_coverage.rb: improve precision of tests.

Wed Apr  6 22:41:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_lgamma_r_m0): fix the condition for