@@ -1,3 +1,8 @@
+Mon Apr 11 06:54:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (apply2files): apply to a VALUE vector instead of a
+	  temporary array.
+
 Sun Apr 10 20:54:16 2016  Joe Swatosh  <joe.swatosh@gmail.com>
 
 	* ext/win32/lib/win32/registry.rb (DeleteValue, DeleteKey): fix
